# flask-demo

./: Taskfile.yml  pyproject.toml
funicular/: app.py  config.py  database.py  logger.py  main.py
funicular/model/: user.py
funicular/repository/: repository.py  user.py
funicular/route/: error_handler.py  health_check.py  user.py
funicular/serializer/: serializer.py  user.py
funicular/service/: user.py
playground/: nested.py  simple.py  test_nested.py  test_simple.py
tests/routes/: test_env.py
tests/unit/route/: test_user.py
tests/unit/service/: test_user.py
