[tool.poetry]
name = "flask-demo"
version = "0.1.0"
description = ""
authors = ["Michał Knapik <mknapik@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
toolz = "^0.10.0"
injector = "^0.18.3"
flask_injector = "^0.12.3"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
black = {version = "^19.10b0", allow-prereleases = true}
expects = "^0.9.0"
pytest-describe = "^1.0.0"
pytest-pspec = "^0.0.3"
pretend = "^1.0.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
